--- a/aboutus.html
+++ b/aboutus.html
@@ -54,11 +54,19 @@
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our
                         lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
+
+                <div class="col-12 col-sm-3 align-self-center">
                     <img src="img/img/logo.png" class="img-fluid">
                 </div>
+
+                <div class="col-12 col-sm-3 align-self-center">
+                    <div class="btn-group col-12" role="group">
+                        <a role="button" class="btn btn-block btn-warning text-center" href="index.html#reserve">Reserve
+                            Table</a>
+                    </div>
+
+                </div>
             </div>
-        </div>
     </header>
 
     <div class="container">
