--- a/index.html
+++ b/index.html
@@ -53,13 +53,19 @@
                         lipsmacking creations will tickle your culinary senses!</p>
                 </div>
 
-                <div class="col-12 col-sm align-self-center">
+                <div class="col-12 col-sm-3 align-self-center">
                     <img src="img/img/logo.png" class="img-fluid">
                 </div>
-            </div>
-        </div>
-    </header>
 
+                <div class="col-12 col-sm-3 align-self-center">
+                    <div class="btn-group col-12" role="group">
+                        <a role="button" class="btn btn-block btn-warning text-center" href="#reserve">Reserve
+                            Table</a>
+                    </div>
+
+                </div>
+            </div>
+    </header>
     <div class="container">
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 order-sm-last col-md-3">
@@ -74,12 +80,13 @@
                             <span class="badge badge-danger">HOT</span>
                             <span class="badge badge-pill badge-secondary">$4.99</span>
                         </h2>
-                        <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian
+                        <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake)
+                            and Italian
                             pizza,
                             topped
                             with Cerignola olives,
-                            ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
-
+                            ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo
+                            Paneer.</p>
                     </div>
                 </div>
             </div>
@@ -91,14 +98,23 @@
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different
-                    salads, six enticing appetizers,
-                    six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just
-                    $19.99 per person </p>
+                <div class="media">
+                    <div class="media-body">
+                        <h2 class="mt-0">Weekend Grand Buffet
+                            <span class="badge badge-danger">NEW</span>
+                        </h2>
+                        <p class="d-none d-sm-block">Featuring mouthwatering
+                            combinations with a choice of five
+                            different
+                            salads, six enticing appetizers,
+                            six main entrees and five choicest desserts. Free flowing bubbly and soft drinks.
+                            All for just
+                            $19.99 per person </p>
+                    </div>
+                    <img class="dflex ml-3 img-thumbnail align-self-centre" src="img/img/buffet.png" alt="buffet">
+                </div>
             </div>
         </div>
-
         <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 order-sm-last col-md-3">
                 <h3>Meet our Culinary Specialists</h3>
@@ -109,18 +125,99 @@
                     <div class="media-body">
                         <h2 class="mt-0">Alberto Somayya</h2>
                         <h4>Executive Chef</h4>
-                        <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International
+                        <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide
+                            International
                             experience
                             having worked closely with
-                            whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion
+                            whos-who in the culinary world, he specializes in creating mouthwatering
+                            Indo-Italian fusion
                             experiences. </p>
                     </div>
                 </div>
 
             </div>
-        </div class="row">
-    </div>
+        </div>
+        <div class="row row-content">
+            <div class="col-12 col-sm-8 offset-sm-2">
+                <div class="card">
+                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                    <div class="card-body">
+                        <form>
+                            <div id="reserve" class="form-group row">
+                                <div class="col-12 col-sm-2">
+                                    <label for="numOfGuests" class="col-form-label">Number of
+                                        Guests</label>
+                                </div>
 
+                                <div class="col-2 col-sm-1">
+                                    <div class="form-check">
+                                        <input type="radio" class="form-check-input" name="1" id="1" value="">
+                                        <label for="1" class="form-check-label">1</label>
+                                    </div>
+                                </div>
+
+                                <div class="col-2 col-sm-1">
+                                    <div class="form-check">
+                                        <input type="radio" class="form-check-input" name="2" id="2" value="">
+                                        <label for="2" class="form-check-label">2</label>
+                                    </div>
+                                </div>
+
+                                <div class="col-2 col-sm-1">
+                                    <div class="form-check">
+                                        <input type="radio" class="form-check-input" name="3" id="3" value="">
+                                        <label for="3" class="form-check-label">3</label>
+                                    </div>
+                                </div>
+                                <div class="col-2 col-sm-1">
+                                    <div class="form-check">
+                                        <input type="radio" class="form-check-input" name="4" id="4" value="">
+                                        <label for="4" class="form-check-label">4</label>
+                                    </div>
+                                </div>
+
+                                <div class="col-2 col-sm-1">
+                                    <div class="form-check">
+                                        <input type="radio" class="form-check-input" name="5" id="5" value="">
+                                        <label for="5" class="form-check-label">5</label>
+                                    </div>
+                                </div>
+                                <div class="col-3 col-sm-1">
+                                    <div class="form-check">
+                                        <input type="radio" class="form-check-input" name="6" id="6" value="">
+                                        <label class="form-check-label">6</label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="col-12 col-sm-2">
+                                    <label for="dateandtime" class="col-form-label">Date and
+                                        Time</label>
+                                </div>
+
+                                <div class="col-12 col-sm-4">
+                                    <input type="text" class="form-control" id="dateandtime" name="dateandtime"
+                                        placeholder="Date">
+                                </div>
+                                <div class="col-12 col-sm-4">
+                                    <input type="text" class="form-control" id="dateandtime" name="dateandtime"
+                                        placeholder="Time">
+                                </div>
+
+                            </div>
+                            <div class="form-group row">
+                                <div class="col-2 offset-0 offset-sm-2">
+                                    <button type="submit" class="btn bg-primary text-white">
+                                        Reserve
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <footer class="footer">
         <div class="container">
             <div class="row">
