--- a/index.html
+++ b/index.html
@@ -41,9 +41,59 @@
                             Contact</a>
                     </li>
                 </ul>
+                <span class="navbar-text">
+                    <a data-toggle="modal" data-target="#loginModal">
+                        <span class="fa fa-sign-in">Login</span>
+                    </a>
+                </span>
             </div>
         </div>
     </nav>
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Login</h4>
+                    <button type="button" role="close" data-dismiss="modal">
+                        &times;
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-row">
+                            <div class="form-group col-sm-4">
+                                <label class="sr-only" for="exEmail">
+                                    Email
+                                </label>
+                                <input type="text" class="form-control form-control-sm mr-1" id="exEmail"
+                                    placeholder="Enter Email">
+                            </div>
+
+                            <div class="form-group col-sm-4">
+                                <label class="sr-only" for="exPassword">
+                                    Enter Password
+                                </label>
+                                <input type="password" class="form-control form-control-sm mr-1" id="exPassword"
+                                    placeholder="Enter Password">
+                            </div>
+                            <div class="col-sm-auto">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox">
+                                    <label class="form-check-label">Remember me</label>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <button type="button" class="btn btn-sm btn-secondary ml-auto"
+                                data-dismiss="modal">Cancel</button>
+                            <button type="button" class="btn btn-sm btn-primary ml-1">Submit</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -59,7 +109,9 @@
 
                 <div class="col-12 col-sm-3 align-self-center">
                     <div class="btn-group col-12" role="group">
-                        <a role="button" class="btn btn-block btn-warning text-center" href="#reserve">Reserve
+                        <a role="button" class="btn btn-block btn-warning text-center" data-toggle="tooltip"
+                            data-html="true" title="Or call us at <br><strong>+912 1756821</strong>"
+                            data-placement="bottom" href="#reserve">Reserve
                             Table</a>
                     </div>
 
@@ -267,6 +319,11 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('[data-toggle="tooltip"]').tooltip();
+        });
+    </script>
 </body>
 
 </html>
