--- a/index.html
+++ b/index.html
@@ -94,6 +94,93 @@
             </div>
         </div>
     </div>
+    <div id="reserveTable" class="modal fade" role="dialog">
+        <div class="modal-dialog" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a Table</h4>
+                    <button type="button" role="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group row">
+                            <div class="col-12 col-sm-3">
+                                <label class="col-form-label">Number of Guests</label>
+                            </div>
+                            <div class="col-1 custom-control custom-radio">
+
+                                <label class="custom-control-label" for="one">1</label>
+                                <input type="radio" class="custom-control-input" id="one" name="one">
+
+                            </div>
+                            <div class="col-1 custom-control custom-radio">
+
+                                <label class="custom-control-label" for="two">2</label>
+                                <input type="radio" class="custom-control-input" id="two" name="two">
+
+                            </div>
+                            <div class="col-1 custom-control custom-radio">
+
+                                <label class="custom-control-label" for="three">3</label>
+                                <input type="radio" class="custom-control-input" id="three" name="three">
+
+                            </div>
+                            <div class="col-1 custom-control custom-radio">
+
+                                <label class="custom-control-label" for="four">4</label>
+                                <input type="radio" class="custom-control-input" id="four" name="four">
+
+                            </div>
+                            <div class="col-1 custom-control custom-radio">
+
+                                <label class="custom-control-label" for="five">5</label>
+                                <input type="radio" class="custom-control-input" id="five" name="five">
+
+                            </div>
+                            <div class="col-1 custom-control custom-radio">
+
+                                <label class="custom-control-label" for="six">6</label>
+                                <input type="radio" class="custom-control-input" id="six" name="six">
+
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="form-check-label col-sm-3">Section</label>
+                            <div class="btn-group" role="group">
+                                <a role="radio-button" class="btn btn-success">
+                                    Non-Smoking</a>
+                                <a role="radio-button" class="btn btn-red bg-danger">Smoking</a>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+
+                            <label for="dateandtime" class="col-12 col-sm-3 col-form-label">Date and
+                                Time</label>
+
+                            <input type="text" class="col-12 col-sm-3 mr-1 form-control" id="date" name="dateandtime"
+                                placeholder="Date">
+
+                            <input type="text" class="col-12 col-sm-3 form-control" id="time" name="dateandtime"
+                                placeholder="Time">
+
+                        </div>
+                        <div class="form-group row">
+                            <div class="mr-1 offset-0 offset-sm-3">
+                                <button data-dismiss="modal" class="btn text-white bg-secondary">
+                                    Cancel
+                                </button>
+                            </div>
+                            <div>
+                                <button type="submit" class="btn bg-primary text-white">
+                                    Submit
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -109,9 +196,8 @@
 
                 <div class="col-12 col-sm-3 align-self-center">
                     <div class="btn-group col-12" role="group">
-                        <a role="button" class="btn btn-block btn-warning text-center" data-toggle="tooltip"
-                            data-html="true" title="Or call us at <br><strong>+912 1756821</strong>"
-                            data-placement="bottom" href="#reserve">Reserve
+                        <a role="button" class="btn btn-block btn-warning text-center" data-toggle="modal"
+                            data-target="#reserveTable">Reserve
                             Table</a>
                     </div>
 
@@ -182,6 +268,14 @@
                     <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
                         <span class="carousel-control-next-icon"></span>
                     </a>
+                    <div class="btn-group" id="carouselButton">
+                        <button class="btn btn-danger btn-sm" id="carousel-pause">
+                            <span class="fa fa-pause"></span>
+                        </button>
+                        <button class="btn btn-danger btn-sm" id="carousel-play">
+                            <span class="fa fa-play"></span>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -381,14 +475,25 @@
             </div>
         </div>
     </footer>
+
+
+
     <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script>
         $(document).ready(function () {
-            $('[data-toggle="tooltip"]').tooltip();
-        });
+            $('#mycarousel').carousel({ interval: 200 });
+
+            $('#carousel-pause').click(function () {
+                $('#mycarousel').carousel('pause');
+            });
+
+            $('#carousel-play').click(function () {
+                $('#mycarousel').carousel('cycle');
+            });
+        })
     </script>
 </body>
 
