--- a/contactus.html
+++ b/contactus.html
@@ -34,9 +34,147 @@
                     <li class="nav-item active"><a class="nav-link" href="#"><span
                                 class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
+                <span class="navbar-text">
+                    <a>
+                        <span class="fa fa-sign-in" id="loginModalButton">Login</span>
+                    </a>
+                </span>
             </div>
         </div>
     </nav>
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Login</h4>
+                    <button type="button" class="close" data-dismiss="modal">
+                        &times;
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-row">
+                            <div class="form-group col-sm-4">
+                                <label class="sr-only" for="exEmail">
+                                    Email
+                                </label>
+                                <input type="text" class="form-control form-control-sm mr-1" id="exEmail"
+                                    placeholder="Enter Email">
+                            </div>
+
+                            <div class="form-group col-sm-4">
+                                <label class="sr-only" for="exPassword">
+                                    Enter Password
+                                </label>
+                                <input type="password" class="form-control form-control-sm mr-1" id="exPassword"
+                                    placeholder="Enter Password">
+                            </div>
+                            <div class="col-sm-auto">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox">
+                                    <label class="form-check-label">Remember me</label>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <button type="button" class="btn btn-sm btn-secondary ml-auto"
+                                data-dismiss="modal">Cancel</button>
+                            <button type="button" class="btn btn-sm btn-primary ml-1">Submit</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="reserveTable" class="modal fade" role="dialog">
+        <div class="modal-dialog" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a Table</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group row">
+                            <div class="col-12 col-sm-3">
+                                <label class="col-form-label">Number of Guests</label>
+                            </div>
+                            <div class="col-1 custom-control custom-radio">
+
+                                <label class="custom-control-label" for="one">1</label>
+                                <input type="radio" class="custom-control-input" id="one" name="one">
+
+                            </div>
+                            <div class="col-1 custom-control custom-radio">
+
+                                <label class="custom-control-label" for="two">2</label>
+                                <input type="radio" class="custom-control-input" id="two" name="two">
+
+                            </div>
+                            <div class="col-1 custom-control custom-radio">
+
+                                <label class="custom-control-label" for="three">3</label>
+                                <input type="radio" class="custom-control-input" id="three" name="three">
+
+                            </div>
+                            <div class="col-1 custom-control custom-radio">
+
+                                <label class="custom-control-label" for="four">4</label>
+                                <input type="radio" class="custom-control-input" id="four" name="four">
+
+                            </div>
+                            <div class="col-1 custom-control custom-radio">
+
+                                <label class="custom-control-label" for="five">5</label>
+                                <input type="radio" class="custom-control-input" id="five" name="five">
+
+                            </div>
+                            <div class="col-1 custom-control custom-radio">
+
+                                <label class="custom-control-label" for="six">6</label>
+                                <input type="radio" class="custom-control-input" id="six" name="six">
+
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="form-check-label col-sm-3">Section</label>
+                            <div class="btn-group" role="group">
+                                <a role="radio-button" class="btn btn-success text-white">
+                                    Non-Smoking</a>
+                                <a role="radio-button" class="btn btn-red bg-danger text-white">Smoking</a>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+
+                            <label for="dateandtime" class="col-12 col-sm-3 col-form-label">Date and
+                                Time</label>
+
+                            <input type="text" class="col-12 col-sm-3 mr-1 form-control" id="date" name="dateandtime"
+                                placeholder="Date">
+
+                            <input type="text" class="col-12 col-sm-3 form-control" id="time" name="dateandtime"
+                                placeholder="Time">
+
+                        </div>
+                        <div class="form-group row">
+                            <div class="mr-1 offset-0 offset-sm-3">
+                                <button data-dismiss="modal" class="btn text-white bg-secondary">
+                                    Cancel
+                                </button>
+                            </div>
+                            <div>
+                                <button type="submit" class="btn bg-primary text-white">
+                                    Submit
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <header class="jumbotron">
         <div class="container">
@@ -51,13 +189,15 @@
                     <img src="img/img/logo.png" class="img-fluid">
                 </div>
 
+
                 <div class="col-12 col-sm-3 align-self-center">
                     <div class="btn-group col-12" role="group">
-                        <a role="button" class="btn btn-block btn-warning text-center" href="index.html#reserve">Reserve
+                        <a role="button" id="reserveModalButton" class="btn btn-block btn-warning text-center">Reserve
                             Table</a>
                     </div>
 
                 </div>
+
             </div>
     </header>
 
@@ -232,6 +372,35 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('#mycarousel').carousel({ interval: 2000 });
+
+            $('#carouselButton').click(function () {
+                if ($('#carouselButton').children('span').hasClass('fa-pause')) {
+                    $('#mycarousel').carousel('pause');
+                    $('#carouselButton').children('span').removeClass('fa-pause');
+                    $('#carouselButton').children('span').addClass('fa-play');
+                }
+
+                else if ($('#carouselButton').children('span').hasClass('fa-play')) {
+                    $('#mycarousel').carousel('cycle');
+                    $('#carouselButton').children('span').removeClass('fa-play');
+                    $('#carouselButton').children('span').addClass('fa-pause');
+                }
+
+            });
+
+            $('#loginModalButton').click(function () {
+                $('#loginModal').modal('show');
+            });
+
+            $('#reserveModalButton').click(function () {
+                $('#reserveTable').modal('show');
+            });
+        });
+    </script>
+
 </body>
 
 </html>
