--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                     </li>
                 </ul>
                 <span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal">
-                        <span class="fa fa-sign-in">Login</span>
+                    <a>
+                        <span class="fa fa-sign-in" id="loginModalButton">Login</span>
                     </a>
                 </span>
             </div>
@@ -54,7 +54,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">Login</h4>
-                    <button type="button" role="close" data-dismiss="modal">
+                    <button type="button" class="close" data-dismiss="modal">
                         &times;
                     </button>
                 </div>
@@ -99,7 +99,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title">Reserve a Table</h4>
-                    <button type="button" role="close" data-dismiss="modal">&times;</button>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
                 <div class="modal-body">
                     <form>
@@ -147,9 +147,9 @@
                         <div class="form-group row">
                             <label class="form-check-label col-sm-3">Section</label>
                             <div class="btn-group" role="group">
-                                <a role="radio-button" class="btn btn-success">
+                                <a role="radio-button" class="btn btn-success text-white">
                                     Non-Smoking</a>
-                                <a role="radio-button" class="btn btn-red bg-danger">Smoking</a>
+                                <a role="radio-button" class="btn btn-red bg-danger text-white">Smoking</a>
                             </div>
                         </div>
                         <div class="form-group row">
@@ -196,8 +196,7 @@
 
                 <div class="col-12 col-sm-3 align-self-center">
                     <div class="btn-group col-12" role="group">
-                        <a role="button" class="btn btn-block btn-warning text-center" data-toggle="modal"
-                            data-target="#reserveTable">Reserve
+                        <a role="button" id="reserveModalButton" class="btn btn-block btn-warning text-center">Reserve
                             Table</a>
                     </div>
 
@@ -345,93 +344,14 @@
 
             </div>
         </div>
-        <div class="row row-content">
-            <div class="col-12 col-sm-8 offset-sm-2">
-                <div class="card">
-                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
-                    <div class="card-body">
-                        <form>
-                            <div id="reserve" class="form-group row">
-                                <div class="col-12 col-sm-2">
-                                    <label for="numOfGuests" class="col-form-label">Number of
-                                        Guests</label>
-                                </div>
-
-                                <div class="col-2 col-sm-1">
-                                    <div class="form-check">
-                                        <input type="radio" class="form-check-input" name="1" id="1" value="">
-                                        <label for="1" class="form-check-label">1</label>
-                                    </div>
-                                </div>
-
-                                <div class="col-2 col-sm-1">
-                                    <div class="form-check">
-                                        <input type="radio" class="form-check-input" name="2" id="2" value="">
-                                        <label for="2" class="form-check-label">2</label>
-                                    </div>
-                                </div>
-
-                                <div class="col-2 col-sm-1">
-                                    <div class="form-check">
-                                        <input type="radio" class="form-check-input" name="3" id="3" value="">
-                                        <label for="3" class="form-check-label">3</label>
-                                    </div>
-                                </div>
-                                <div class="col-2 col-sm-1">
-                                    <div class="form-check">
-                                        <input type="radio" class="form-check-input" name="4" id="4" value="">
-                                        <label for="4" class="form-check-label">4</label>
-                                    </div>
-                                </div>
-
-                                <div class="col-2 col-sm-1">
-                                    <div class="form-check">
-                                        <input type="radio" class="form-check-input" name="5" id="5" value="">
-                                        <label for="5" class="form-check-label">5</label>
-                                    </div>
-                                </div>
-                                <div class="col-3 col-sm-1">
-                                    <div class="form-check">
-                                        <input type="radio" class="form-check-input" name="6" id="6" value="">
-                                        <label class="form-check-label">6</label>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <div class="col-12 col-sm-2">
-                                    <label for="dateandtime" class="col-form-label">Date and
-                                        Time</label>
-                                </div>
-
-                                <div class="col-12 col-sm-4">
-                                    <input type="text" class="form-control" id="dateandtime" name="dateandtime"
-                                        placeholder="Date">
-                                </div>
-                                <div class="col-12 col-sm-4">
-                                    <input type="text" class="form-control" id="dateandtime" name="dateandtime"
-                                        placeholder="Time">
-                                </div>
-
-                            </div>
-                            <div class="form-group row">
-                                <div class="col-2 offset-0 offset-sm-2">
-                                    <button type="submit" class="btn bg-primary text-white">
-                                        Reserve
-                                    </button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
     <footer class="footer">
         <div class="container">
             <div class="row">
                 <div class="col-4 offset-1 col-sm-2">
                     <h5>Links</h5>
-                    <ul class="list-unstyled" <li><a href="#">Home</a></li>
+                    <ul class="list-unstyled">
+                        <li><a href="#">Home</a></li>
                         <li><a href="aboutus.html">About</a></li>
                         <li><a href="#">Menu</a></li>
                         <li><a href="contactus.html">Contact</a></li>
@@ -495,6 +415,14 @@
                     $('#carouselButton').children('span').addClass('fa-pause');
                 }
 
+            });
+
+            $('#loginModalButton').click(function () {
+                $('#loginModal').modal('show');
+            });
+
+            $('#reserveModalButton').click(function () {
+                $('#reserveTable').modal('show');
             });
         });
     </script>
